# xmlsec-wasm

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.json  pnpm-lock.yaml
.devcontainer/: devcontainer.json
.github/workflows/: build.yaml  publish.yaml
scripts/: build-dependencies.sh  build.sh  postinstall.sh
src/: bindings.cpp  buffer.cpp  buffer.hpp  keystore.cpp  keystore.hpp  signature.cpp  signature.hpp  signed.cpp  signed.hpp  signer.cpp  signer.hpp  validator.cpp  validator.hpp
tests/: signer.test.ts
tests/fixtures/: ca.cert  store.p12  test_ca.cert
